_includes/scss/gallery.scss
.gallery {
  clear: both;
  margin: 1.618em 0;
  overflow: hidden;
}

.gallery-img {
  padding: 10px;
  overflow: hidden;
  -webkit-transition: background-color 300ms $transition-ease-in, opacity 500ms linear;transition: background-color 300ms $transition-ease-in, opacity 500ms linear;
  cursor: pointer;
  opacity: 0;
  &:nth-child(-n+6) {
    opacity: 1;
  }
  @media #{$desktop-xl} {
    &:nth-child(-n+9) {
      opacity: 1;
    }
  }
  &.is-in-viewport,
  &.is-visible {
    opacity: 1;
  }
  img {
    display: block;
    max-width: 100%;
  }
  &:hover {
    background-color: $light-gray;
  }
  &.single-img {
    width: 100%;
    max-width: 800px;
    margin: 1.618em auto;
  }
}

.js-lightbox {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  @include z-index-6;
  width: 100vw;
  height: 100vh;
  background: rgba(black, 0.9);
  padding-left: 0;
  -webkit-transition: padding-left 500ms ease;
  transition: padding-left 500ms ease;
  @media #{$tablet}, #{$mobile} {
    -webkit-box-orient: vertical;
    -webkit-box-direction: reverse;
        -ms-flex-flow: column-reverse;
            flex-flow: column-reverse;
  }
}

.js-lightbox-img-wrap {
  overflow: visible;
  transition: padding 300ms $transition-ease-in;
  position: relative;
  img {
    display: block;
    max-width: 88vw;
    max-height: 88vh;
    height: auto;
    opacity: 1;
    -webkit-transition: opacity 1000ms linear 100ms;
    transition: opacity 1000ms linear 100ms;
    -webkit-box-shadow: 0 10px 26px -6px rgba(black, .5);
            box-shadow: 0 10px 26px -6px rgba(black, .5);
  }
  iframe {
    opacity: 1;
    -webkit-transition: opacity 1000ms linear 100ms;
    transition: opacity 1000ms linear 100ms;
    -webkit-box-shadow: 0 10px 26px -6px rgba(black, .5);
            box-shadow: 0 10px 26px -6px rgba(black, .5);
  }
  img[data-src],
  iframe[data-src] {
    opacity: 0;
  }
}

.js-lightbox-close {
  height: 16px;
  width: 16px;
  position: absolute;
  top: 20px;
  right: 20px;
  cursor: pointer;
  span {
    position: absolute;
    top: 7px;
    height: 2px;
    width: 16px;
    background: $yellow;
    -webkit-transition: 200ms ease-in;
    transition: 200ms ease-in;
    &:first-child {
      -webkit-transform: rotate(45deg);
              transform: rotate(45deg);
    }
    &:last-child {
      -webkit-transform: rotate(135deg);
              transform: rotate(135deg);
    }
  }
}

.js-lightbox-info-trigger {
  position: absolute;
  top: 1em;
  right: 68px;
  text-align: center;
  @include z-index-8;
  &::before {
    content: '+';
    display: block;
    position: absolute;
    top: 0.5em;
    left: 0;
    vertical-align: middle;
    color: $yellow;
    -webkit-transition: 300ms ease-in;
    transition: 300ms ease-in;
    font-size: 12px;
  }
  &::after {
    display: block;
    content: '';
    position: absolute;
    background: $yellow;
    top: 0;
    left: 0;
    height: 2px;
    width: 0;
    -webkit-transition: width 300ms ease-in;
    transition: width 300ms ease-in;
  }
  &:hover {
    &::after {
      width: 100%;
    }
  }
  input {
    font-family: 'Poppins', sans-serif;
    font-size: 12px;
    display: block;
    -webkit-appearance: none !important;
    background: transparent;
    border: none;
    border-radius: 0 !important;
    color: $yellow;
    padding: 6px 0 0 14px;
    cursor: pointer;
    margin: 0 auto;
    -webkit-transition: 300ms ease-in;
    transition: 300ms ease-in;
  }
  @media #{$tablet}, #{$mobile} {
    top: auto;
    bottom: 2.6em;
    left: 50%;
    right: auto;
    -webkit-transform: translateX(-50%);
            transform: translateX(-50%);
    &::before,
    &::after {
      display: none;
    }
    input {
      font-size: 16px;
      padding: $spacing-smallest;
      font-weight: 700;
    }
  }
}

.is-visible {
  cursor: default;
  &.is-current {
    .js-lightbox-img-wrap {
      -webkit-animation: slideUp 500ms $transition-ease-in 1 forwards, fadeIn 500ms linear 1 forwards;
      animation: slideUp 500ms $transition-ease-in 1 forwards, fadeIn 500ms linear 1 forwards;
    }
  }
  &.is-current,
  &.is-current.next {
    .js-lightbox-close {
      span {
        &:first-child {
          -webkit-animation: lightboxSpan1 500ms $transition-ease-in 1 forwards;
                  animation: lightboxSpan1 500ms $transition-ease-in 1 forwards;
        }
        &:last-child {
          -webkit-animation: lightboxSpan2 500ms $transition-ease-in 1 forwards;
                  animation: lightboxSpan2 500ms $transition-ease-in 1 forwards;
        }
      }
    }
    .js-lightbox-img-wrap {
      -webkit-animation: slideRight 500ms $transition-ease-in 1 forwards;
      animation: slideRight 500ms $transition-ease-in 1 forwards;
    }
  }
  &.is-current.prev {
    .js-lightbox-close {
      span {
        &:first-child {
          -webkit-animation: lightboxSpan1 300ms ease-in-out 1 forwards reverse;
                  animation: lightboxSpan1 300ms ease-in-out 1 forwards reverse;
        }
        &:last-child {
          -webkit-animation: lightboxSpan2 300ms ease-in-out 1 forwards reverse;
                  animation: lightboxSpan2 300ms ease-in-out 1 forwards reverse;
        }
      }
    }
    .js-lightbox-img-wrap {
      -webkit-animation: slideLeft 500ms $transition-ease-in 1 forwards;
      animation: slideLeft 500ms $transition-ease-in 1 forwards;
    }
  }
}

.js-lightbox-info {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 300px;
  background: $yellow;
  overflow: visible;
  padding: 20px;
  @include z-index-7;
  h2 {
    color: $black;
    margin: 0 0 1.618rem 0;
    padding: 0;
    text-transform: capitalize;
    font-size: 2em;
  }
  p {
    color: $black;
  }
  @media #{$tablet}, #{$mobile} {
    width: 100%;
  }
}

// Lightbox next buttons

.js-lightbox-prev,
.js-lightbox-next {
  display: block;
  text-align: center;
  padding: 0.26em 1em;
  border: 2px solid $yellow;
  background: rgba($black, 0.25);
  color: $yellow;
  font-size: 1rem;
  cursor: pointer;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
          transform: translateY(-50%);
  -webkit-appearance: none !important;
  -webkit-transition: color 400ms ease-in, background 400ms ease-in, top 600ms ease-in, left 600ms ease-in, -webkit-transform 600ms ease-in;
  transition: color 400ms ease-in, background 400ms ease-in, top 600ms ease-in, left 600ms ease-in, -webkit-transform 600ms ease-in;
  transition: color 400ms ease-in, background 400ms ease-in, top 600ms ease-in, left 600ms ease-in, transform 600ms ease-in;
  transition: color 400ms ease-in, background 400ms ease-in, top 600ms ease-in, left 600ms ease-in, transform 600ms ease-in, -webkit-transform 600ms ease-in;
  @include z-index-7;
  &:focus {
    outline: none !important;
  }
  &:hover {
    background: $yellow;
    color: $black;
  }
  @media #{$tablet}, #{$mobile} {
    top: auto;
    bottom: 2.618em;
    -webkit-transform: none;
            transform: none;
  }
}

.js-lightbox-prev {
  left: 20px;
  -webkit-transform: translateY(-50%) rotate(180deg);
          transform: translateY(-50%) rotate(180deg);
  @media #{$tablet}, #{$mobile} {
    -webkit-transform: rotate(180deg);
            transform: rotate(180deg);
  }
}

.js-lightbox-next {
  right: 20px;
}

.is-showing-info {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 300px;
  -webkit-transition: padding-left 500ms ease;
  transition: padding-left 500ms ease;
  .js-lightbox-img-wrap {
    @include vertical-center;
    padding: $spacing-large;
    img {
      max-width: 100%;
    }
    @media #{$tablet}, #{$mobile} {
      padding: 0;
      img {
        max-width: 88vw;
      }
    }
  }
  .js-lightbox-prev,
  .js-lightbox-next {
    background: $black;
    &:hover {
      background: $white;
      color: $black;
    }
    @media #{$tablet}, #{$mobile} {
      bottom: 2.618em;
      -webkit-transform: none;
              transform: none;
    }
  }
  .js-lightbox-prev {
    top: calc(100% - 68px);
    -webkit-transform: rotate(180deg);
            transform: rotate(180deg);
    @media #{$tablet}, #{$mobile} {
      top: auto;
    }
  }
  .js-lightbox-next {
    right: calc(100% - 140px);
    top: calc(100% - 68px);
    -webkit-transform: none;
            transform: none;
    @media #{$tablet}, #{$mobile} {
      top: auto;
      right: 20px;
    }
  }
  .js-lightbox-info-trigger {
    &::before {
      content: '-';
    }
  }
  @media #{$tablet}, #{$mobile} {
    padding-left: 0;
    .js-lightbox-info-trigger {
      input {
        color: $black;
      }
    }
  }
}

// Video Gallery
.video-lightbox {
  .js-lightbox-img-wrap {
    width: 100%;
    max-width: 88vw;
    max-height: 88vh;
  }
}

